# VISION

./: CMakeLists.txt  sdkconfig  sdkconfig.old
VISION-OS/vision/: globalVar.h  main  main.c  zaire_systems.c  zaire_systems.h
VISION-OS/vision/opencv/proven/: cmd_line.txt  take_photo.cpp.test
VISION-OS/vision/opencv/test/: capture  vision.cpp  vision_photo
main/: CMakeLists.txt  dns_server.c  globalVar.h  jdy_cmd_list.h  led_config.c  main.c  settings_config.c  task_config.c  walkie_config.c  zaire_cam_config.c  zaire_i2s_config.c  zaire_network_config.c  zaire_systems.c  zaire_systems.h
spiffs/: globalData.js  script.js
spiffs/www/: dashStyle.css  data.js  homeScreen.html
